# windows_borderless_rust

./: .gitignore  Cargo.toml
src/: app.rs  application.rs  input.rs  main.rs  render.rs  utils.rs  winapi_utils.rs  window.rs
src/shaders/: shader.wgsl
src/ss/: window.rs
