[package]
name = "windows_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "0.4.2"  # Required for wgpu surface
wgpu = "0.12"
pollster = "0.2"

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
]
