[package]
name = "windows_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.12"  # The graphics backend
raw-window-handle = "0.4.2"  # Implement on our window struct so that wgpu can find a surface
pollster = "0.2"  # Allows us to use async functions
env_logger = "0.9.0"  # Allows us to log wgpu's errors
log = "0.4"
# Needed to convert structs to u8 slices to place in gpu buffers
bytemuck = { version = "1.8.0", features = [ "derive" ] }
cgmath = "0.18.0" # Should also consider glam or adding the needed features into numb_rs
image = "0.24.1"
# GUI library: Immediate mode similar in scope to imgui but rust native
#egui = { version = "0.17.0", features = [ "convert_bytemuck" ] }
#egui_wgpu_backend = "0.17.0"

# Windows API bindings
[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
]
